<resources>
    <string name="app_name">ScreenRemote</string>
    <string name="device_state">设备状态</string>
    <string name="software_version">软件版本</string>
    <string name="weidu">纬度:</string>
    <string name="jingdu">经度:</string>
    <string name="ground_speed">地向速度:</string>
    <string name="zhuban_state">主板状态:</string>
    <string name="course_angle">航向角:</string>
    <string name="rtk_status">RTK状态码:</string>
    <string name="satellite_count">卫星数量:</string>
    <string name="liquid_level">液位值:</string>
    <string name="oil_count">柴油油量:</string>
    <string name="battery_count">车电池电量:</string>
    <string name="left_error_code">左电驱故障码:</string>
    <string name="right_error_code">右电驱故障码:</string>
    <string name="work_mode">作业模式:</string>
    <string name="language">切换语言</string>
    <string name="log_reload">日志上传</string>
    <string name="operation_title">操作日志</string>
    <string name="upgrade_title">APP升级</string>
    <string name="produce_title">产品说明</string>
    <string name="uploaded">已上传</string>
    <string name="upload">上传</string>
    <string name="control_mode">遥控模式</string>
    <string name="unmanned_mode">无人模式</string>
    <string name="device_id">控制ID:</string>
    <string name="save_restart">保存并重启</string>
    <string name="follow_system">跟随系统</string>
    <string name="compression">一键上传</string>
    <string name="map_privacy_content">亲，感谢您对XXX一直以来的信任！我们依据最新的监管要求更新了XXX《隐私权政策》，特向您说明如下\n1.为向您提供交易相关基本功能，我们会收集、使用必要的信息；\n2.基于您的明示授权，我们可能会获取您的位置（为您提供附近的商品、店铺及优惠资讯等）等信息，您有权拒绝或取消授权；\n3.我们会采取业界先进的安全措施保护您的信息安全；\n4.未经您同意，我们不会从第三方处获取、共享或向提供您的信息；</string>
    <string name="map_privacy_title">温馨提示(隐私合规示例)</string>
    <string name="agree">同意</string>
    <string name="not_agree">不同意</string>
    <string name="speed_tilte">速度(米/秒)</string>
    <string name="remain_oil_title">剩余油量(升)</string>
    <string name="remain_medical">剩余药量(升)</string>
    <string name="medical_pre">亩均药量(升)</string>
    <string name="back">返回</string>
    <string name="h12pro_app">遥控器APP</string>
    <string name="current_version">当前版本号</string>
    <string name="upgrade">升级</string>
    <string name="reStartApp">2s后即将重启应用</string>
</resources>